tests/should_fail/for_destructure_on_int.nv
module test
// for destructure on a non-list (Int)
for (a, b) in 42 {
    println(Cast::string(a))
}
